# solver-minimax

./: .gitignore  README.md  config-default.toml  pyproject.toml  requirements-imagegen.txt  requirements.txt
.github/workflows/: lint.yaml  test.yaml
benchmarks/: bench_endgame_5.py  bench_endgame_9.py  bench_openings.py  bench_openings_timelimit.py
src/solver/: __init__.py  __main__.py  benchmark.py  board.py  boardmaps.py  client.py  config.py  exceptions.py  log.py  main.py  piece.py  server.py  server_base.py  utils.py
tests/: __init__.py  test_full.py  test_indexing.py  test_piece.py
tools/: generate_board_images.py  socket_client.py  socket_server.py
