[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gambit-solver-minimax"
version = "0.1.0"
description = "Module for determining an optimal chess move from an input partial FEN string using a Minimax algorithm."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
	# Disable PyPi uploads (for now)
	"Private :: Do Not Upload",
	# License information
	"License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
]

# Only add dependencies to run the package here
dependencies = [
    "numpy>=2.3,<2.4",
    "pytest>=9.0.2",
]

[project.urls]
Repository = "https://github.com/GambitBot/solver-minimax"

[project.scripts]
serve = "solver.main:main"

[tool.pyright]
typeCheckingMode = "standard"

# Enable warnings for unnecessary imports
reportUnusedImport = "warning"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 125

[tool.ruff.lint]
select = [
	# Default rules
	"E4",
	"E7",
	"E9",
	"F",

	# Code formatting
	"I",   # isort
	"PTH", # use pathlib
	"W2",  # whitespace issues

	# Docstrings
	"D1",   # docstrings for public methods/classes
	"D200", # unnecessary-multiline-docstring
	"D419", # empty-docstring
]

[tool.ruff.per-file-ignores]
# Ignore docstrings in all tests
"tests/**" = ["D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
